--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ anthropic==0.18.0
 numpy<2.0
 chromadb==0.4.24
 sentence-transformers==2.6.1
+rank-bm25==0.2.2
 prometheus-client==0.19.0
 opentelemetry-api==1.21.0
 opentelemetry-sdk==1.21.0
