--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.27.0
 httpx==0.26.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
-anthropic==0.18.0
+anthropic>=0.39.0,<1.0
 numpy<2.0
 chromadb==0.4.24
 sentence-transformers==2.6.1
